# lab-2-data-pipeline-multi-modal-minefield-ltaq

./: README.md  main.py  processed_knowledge_base.json  pyproject.toml
starter_code/: orchestrator.py  process_csv.py  process_html.py  process_legacy_code.py  process_pdf.py  process_transcript.py  quality_check.py  schema.py
